2020-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3066.c:
	  Fix bug #3066.
	* src/pdk/gen.c,
	  support/regression/tests/bug-3065.c:
	  Fix bug #3065.

2020-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-gbz80.def:
	  Support for sp in notUsed for gbz80, patch by Basil Hussain.
	* src/z80/gen.c:
	  Use tlcs90 (sp) adressing mode.
	* src/z80/peep.c,
	  src/z80/main.c:
	  notUsed() for gbz80 with flag support, from patch by Baŝto.

2020-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Rename operation in immdInRange rule to prepare for further patches, patch by Baŝto.
	* src/SDCCpeeph.c:
	  Allow bitwise operation in immdInRange, patch by Baŝto.
	* device/lib/stm8-large/*
	  Use optimized support routines for large memory model, patch by Basil Hussain.

2020-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3064.

2020-06-20 Erik Petrich <epetrich AT ivorytower.normna.ok.us>

	* src/pdk/gen.c (cheapMove, aopOp): Fix bug #3038
	* src/SDCCast.c (expandInlineFuncs): Fix bug #3029

2020-06-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-3056.c,
	  src/SDCCsymt.c: Fix bug #3056 for pdk too
	* src/SDCCsymt.c: Fix bugs #3059, #3049, #3047 (same cause)

2020-06-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmem.c,
	  src/pic16/main.c: Fix bug #3056
	* src/pic16/gen.c: Fix bug #3057

2020-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2368.c:
	  Fix bug #3063.
	* src/z80/gen.c,
	  src/z80/main.c:
	  Fix bug #3055.
	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/stm8/gen.c:
	  Fix bug #3044.

2020-06-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: Fix bug #3061
	* src/SDCCcse.c (algebraicOpts): Fix bug #3062

2020-06-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable): Fix bug #3034